Fixed Tech Stack Spacing, Fixed Intital Site Theme
Small margin issue with tech stack and prevented flash when there is nothing is local storage on initial site load.

--- a/css/techstack.css
+++ b/css/techstack.css
@@ -50,6 +50,7 @@
     display: flex;
     flex-wrap: wrap;
     gap: 0.375rem;
+    margin-top: 0.5rem;
 }
 
 /* Frontend */
